--- a/build.yaml
+++ b/build.yaml
@@ -13,10 +13,10 @@
 #
 ---
 include:
-  - board: nrf52840
+  - board: nice_nano_v2
     shield: corne_left
-  - board: nrf52840
+  - board: nice_nano_v2
     shield: corne_right
-  - board: nrf52840
+  - board: nice_nano_v2
     shield: settings_reset
   
